--- a/VotingApp/src/main/resources/application.properties
+++ b/VotingApp/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 server.port=${port:9002}
 #spring.datasource.name=comlnl
 #spring.datasource.url=jdbc:mysql://localhost:3306/springboot
-#spring.datasource.url=jdbc:mysql://localhost:3306/springbootnew?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootnew?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 # SMTP Configurations
 spring.mail.host=smtp.gmail.com
@@ -16,10 +16,3 @@ spring.mail.username=myvoterapp@gmail.com
 spring.mail.password=jwex nubc rkme htpz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-spring.datasource.url=jdbc:h2:mem:reservationdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
